# C-Programming-P1

./: CMakeLists.txt  file.txt  main.c
utils/: averageGrade.c  charsToInt.c  checkForEvenDigits.c  evaluateDigits.c  fileOperations.c  fileTest.c  getDigitFromNumber.c  nextDay.c  nextDay_structs.c  printSequences.c  rationalNumbers.c  rotateArrayLeft.c  rotateArrayRight.c  strtrim.c  sumOfDivisors.c  swapTwoArrays.c  swapTwoVarsWithoutThird.c  toLowerAndUpper.c
